# optimiz-rs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENHANCEMENT_STRATEGY.md  FINAL_RELEASE_STATUS.md  LINKEDIN_POST.md  NOTEBOOK_AUDIT_REPORT.md  NOTEBOOK_EXECUTION_REPORT.md  PUBLICATION_GUIDE_v1.0.0.md  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v1.0.0.md  TIMESERIES_HELPERS_IMPLEMENTATION.md  pyproject.toml  test_release.py
docs/: COMPLETION_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_IMPROVEMENTS_NEEDED.md  PUBLICATION_STATUS.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v1.0.0.md  differential_evolution.md  grid_search.md  hmm.md  requirements.txt
docs/archive/: COMPLETION_SUMMARY.md  DEVELOPMENT.md  ENHANCEMENT_STRATEGY.md  ENHANCEMENT_SUITE_COMPLETE.md  MEAN_FIELD_GAMES_IMPLEMENTATION_SUMMARY.md  MFG_TUTORIAL_COMPLETE.md  NOTEBOOK_AUDIT_REPORT.md  PROJECT_SUMMARY.md  REFACTORING.md  SETUP_COMPLETE.md  SHADE_IMPLEMENTATION.md  TIMESERIES_HELPERS_IMPLEMENTATION.md  information_theory.md  mcmc.md
docs/source/: _fix_diagrams3.py  _gen_diagrams.py  benchmarks.md  conf.py  examples.md  getting-started.md  index.rst  installation.md  mfg_tutorial.md
docs/theory/: differential_evolution.md  hmm.md  information_theory.md  mcmc.md
examples/: animate_mckean_vlasov.py  animate_propagation_of_chaos.py  benchmark_v2.md  benchmark_v2.py  timeseries_integration.py
examples/notebooks/: 01_hmm_tutorial.ipynb  02_mcmc_tutorial.ipynb  03_differential_evolution_tutorial.ipynb  03_optimal_control_tutorial.ipynb  04_real_world_applications.ipynb  05_graph.ipynb  05_performance_benchmarks.ipynb  06_risk_measures.ipynb  07_topology.ipynb  08_volterra.ipynb  09_signatures.ipynb  10_bsde.ipynb  11_pde.ipynb  12_stochastic_control.ipynb  13_quadratic_impact.ipynb  14_mckean_vlasov.ipynb  15_agent_based.ipynb  16_robust_drift.ipynb  17_generative_calibration.ipynb  README.md  _build_enriched_v2.py  mean_field_games_tutorial.ipynb
python/optimizr/: __init__.py  core.py
scripts/: enrich_v2_notebooks.py  generate_v2_notebooks.py  inject_doc_plots.py
src/: core.rs  de_refactored.rs  differential_evolution.rs  functional.rs  grid_search.rs  hmm_refactored.rs  information_theory.rs  lib.rs  maths_toolkit.rs  mcmc_refactored.rs  risk_metrics.rs  rust_objectives.rs  shade.rs  sparse_optimization.rs  timeseries_utils.rs
src/agent_based/: mod.rs  python_bindings.rs
src/bsde/: deep_bsde_bridge.rs  mod.rs  python_bindings.rs  theta_scheme.rs
src/de/: mod.rs
src/graph/: laplacian.rs  mod.rs  python_bindings.rs  spectral_clustering.rs
src/hmm/: config.rs  emission.rs  mod.rs  model.rs  python_bindings.rs  viterbi.rs
src/inference/: mod.rs  python_bindings.rs  robust_drift.rs
src/mcmc/: config.rs  likelihood.rs  mod.rs  proposal.rs  python_bindings.rs  sampler.rs
src/mean_field/: forward_backward.rs  mckean_vlasov.rs  mckean_vlasov_python_bindings.rs  mod.rs  nash_equilibrium.rs  optimal_transport.rs  pde_solvers.rs  python_bindings.rs  types.rs
src/optimal_control/: backtest.rs  hjb_solver.rs  jump_diffusion.rs  kalman_filter.rs  matrix_riccati.rs  mod.rs  mrsjd.rs  ou_estimator.rs  py_bindings.rs  quadratic_impact_control.rs  quadratic_impact_python_bindings.rs  regime_switching.rs  viscosity.rs
src/optimization/: generative_calibration_hooks.rs  mod.rs  python_bindings.rs
src/pde/: elliptic_fd.rs  fokker_planck.rs  hjb_multid.rs  mod.rs  python_bindings.rs
src/point_processes/: hawkes.rs  kernels.rs  mittag_leffler.rs  mixed_fbm.rs  mod.rs  order_flow.rs  python_bindings.rs
src/portfolio_optimization/: cara.rs  convex.rs  mean_variance.rs  mod.rs  python_bindings.rs  traits.rs
src/risk_measures/: cvar.rs  mod.rs  python_bindings.rs  var.rs
src/signatures/: log_signature.rs  mod.rs  path_signature.rs  python_bindings.rs  random_signature.rs  signature_kernel.rs  utils.rs
src/stochastic_control/: mod.rs  optimal_switching.rs  pontryagin.rs  python_bindings.rs  (+1 more)
tests/: test_v2_api.py
(+45 files in other folders)
